genaral structure + card Home section structure

--- a/index.html
+++ b/index.html
@@ -5,5 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nantes Quests</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <img src="" alt="" />
+        <a href="#">Géo</a>
+        <a href="#">Histoire</a>
+        <a href="#">Culture</a>
+      </nav>
+    </header>
+    <main>
+      <!-- Home Card -->
+      <section>
+        <h1>Trouve le lieu à Nantes !</h1>
+        <article class="card">
+          <h2>Salut à toi joueur.se courageux.se !</h2>
+          <p>~</p>
+          <form>
+            <label for="name">Quel est ton nom ?</label>
+            <input type="text" name="name" id="userName" required />
+          </form>
+          <button class="cta" type="button">Let's go !</button>
+          <p>~</p>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <p>©apyright | Team KipiK</p>
+    </footer>
+  </body>
 </html>
