--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nantes Quests</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <img src="" alt="" />
-        <a href="#">Géo</a>
-        <a href="#">Histoire</a>
-        <a href="#">Culture</a>
+        <img src="Images icones/LOGO NANTES QUEST.png" alt="" />
+        <div class="links-wrapper">
+          <a href="#">Géographie</a>
+          <a href="#">Histoire</a>
+          <a href="#">Culture</a>
+        </div>
       </nav>
     </header>
     <main>
@@ -19,7 +22,7 @@
       <section>
         <h1>Trouve le lieu à Nantes !</h1>
         <article class="card">
-          <h2>Salut à toi joueur.se courageux.se !</h2>
+          <h2>Bienvenue sur le Quiz Géographie</h2>
           <p>~</p>
           <form>
             <label for="name">Quel est ton nom ?</label>
