structure html  quest card

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
           <p>~</p>
         </article>
       </section>
+      <!-- Quest Card -->
+      <section>
+        <article>
+          <h1>Trouve le lieu à Nantes !</h1>
+          <div class="choicesWrapper">
+            <button>Chantenay</button>
+            <button>Chantenay</button>
+            <button>Chantenay</button>
+            <button>Chantenay</button>
+          </div>
+          <img src="" alt="" />
+          <button class="cta">Valider</button>
+        </article>
+      </section>
     </main>
     <footer>
       <p>©apyright | Team KipiK</p>
