--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </header>
     <main>
       <!-- Home Card -->
-      <section>
+      <section class="home-section">
         <h1>Trouve le lieu à Nantes !</h1>
-        <article class="card">
+        <article class="card card-home">
           <h2>Bienvenue sur le Quiz Géographie</h2>
           <p>~</p>
           <form>
@@ -33,10 +33,10 @@
         </article>
       </section>
       <!-- Quest Card -->
-      <section>
-        <article>
-          <h1>Trouve le lieu à Nantes !</h1>
-          <div class="choicesWrapper">
+      <section class="quest-section">
+        <h1>Trouve le lieu à Nantes !</h1>
+        <article class="card card-quest">
+          <div class="choices-wrapper">
             <button>Chantenay</button>
             <button>Chantenay</button>
             <button>Chantenay</button>
@@ -44,6 +44,20 @@
           </div>
           <img src="" alt="" />
           <button class="cta">Valider</button>
+        </article>
+      </section>
+      <!-- Score Card -->
+      <section class="score-section">
+        <h1>Trouve le lieu à Nantes !</h1>
+        <article class="card card-quest">
+          <h2>Bravo <span class="currentUserName"></span> !</h2>
+          <p>~</p>
+          <div class="score-wrapper">
+            <p>Ton score est :</p>
+            <p id="userScore">5/5</p>
+          </div>
+          <p>~</p>
+          <button class="cta">Rejouer</button>
         </article>
       </section>
     </main>
