--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </article>
       </section>
       <!-- Quest Card -->
-      <section class="quest-section">
+      <section class="quest-section displaynone">
         <h1>Trouve le lieu à Nantes !</h1>
         <article class="card card-quest">
           <div class="choices-wrapper">
@@ -47,7 +47,7 @@
         </article>
       </section>
       <!-- Score Card -->
-      <section class="score-section">
+      <section class="score-section displaynone">
         <h1>Trouve le lieu à Nantes !</h1>
         <article class="card card-quest">
           <h2>Bravo <span class="currentUserName"></span> !</h2>
