minor change CSS and HTML

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
       <nav>
         <img src="Images icones/LOGO NANTES QUEST.png" alt="" />
         <div class="links-wrapper">
-          <a href="#">Géographie</a>
-          <a href="#">Histoire</a>
-          <a href="#">Culture</a>
+          <a href="#">Quiz Géographie </a>
+          <p>|</p>
+          <a href="#">Quiz Histoire </a>
+          <p>|</p>
+          <a href="#">Quiz Culture</a>
         </div>
       </nav>
     </header>
