--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button>Chantenay</button>
             <button>Chantenay</button>
           </div>
-          <img src="" alt="" />
+          <img src="Images jeux\Machine de lile.jpg" alt="Elephant Nantes" />
           <button class="cta">Valider</button>
         </article>
       </section>
