background card white with opacity

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
         <article class="card card-home">
           <h2>Bienvenue sur le Quiz Géographie</h2>
           <p>~</p>
-          <form>
-            <label for="name">Quel est ton nom ?</label>
-            <input type="text" name="name" id="userName" required />
-          </form>
-          <button class="cta" type="button">Let's go !</button>
+          <div class="form-wrapper">
+            <form>
+              <label for="name">Quel est ton nom ?</label>
+              <input type="text" name="name" id="userName" required />
+            </form>
+            <button class="cta" type="button">Let's go !</button>
+          </div>
           <p>~</p>
         </article>
       </section>
