--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
       <!-- Home Card -->
-      <section class="home-section">
+      <section class="home-section displaynone">
         <h1>Trouve le lieu à Nantes !</h1>
         <article class="card card-home">
           <h2>Bienvenue sur le Quiz Géographie</h2>
@@ -35,7 +35,7 @@
         </article>
       </section>
       <!-- Quest Card -->
-      <section class="quest-section">
+      <section class="quest-section displaynone">
         <h1>Trouve le lieu à Nantes !</h1>
         <article class="card card-quest">
           <div class="choices-wrapper">
