--- a/index.html
+++ b/index.html
@@ -20,25 +20,22 @@
       </nav>
     </header>
     <main>
+      <h1>Trouve le lieu à Nantes !</h1>
       <!-- Home Card -->
       <section class="home-section">
-        <h1>Trouve le lieu à Nantes !</h1>
         <article class="card card-home">
           <h2>Bienvenue sur le Quiz Géographie</h2>
           <p>~</p>
-          <div class="form-wrapper">
-            <form>
-              <label for="name">Quel est ton nom ?</label>
-              <input type="text" name="name" id="userName" required />
-            </form>
-            <button class="cta" type="button">Let's go !</button>
-          </div>
+          <form>
+            <label for="name">Quel est ton nom ?</label>
+            <input type="text" name="name" id="userName" required />
+          </form>
+          <button class="cta launcherButton" type="button">Let's go !</button>
           <p>~</p>
         </article>
       </section>
       <!-- Quest Card -->
       <section class="quest-section">
-        <h1>Trouve le lieu à Nantes !</h1>
         <article class="card card-quest">
           <div class="choices-wrapper">
             <button>Chantenay</button>
@@ -47,12 +44,11 @@
             <button>Chantenay</button>
           </div>
           <img src="Images jeux\Machine de lile.jpg" alt="Elephant Nantes" />
-          <button class="cta">Valider</button>
+          <button class="cta validationButton">Valider</button>
         </article>
       </section>
       <!-- Score Card -->
       <section class="score-section">
-        <h1>Trouve le lieu à Nantes !</h1>
         <article class="card card-quest">
           <h2>Bravo <span class="currentUserName"></span> !</h2>
           <p>~</p>
@@ -61,7 +57,7 @@
             <p id="userScore">5/5</p>
           </div>
           <p>~</p>
-          <button class="cta">Rejouer</button>
+          <button class="cta launcherButton">Rejouer</button>
         </article>
       </section>
     </main>
