--- a/index.html
+++ b/index.html
@@ -37,14 +37,20 @@
       <!-- Quest Card -->
       <section class="quest-section displaynone">
         <h1>Trouve le lieu à Nantes !</h1>
-        <article class="card card-quest">
-          <div class="choices-wrapper">
-            <button>Chantenay</button>
-            <button>Chantenay</button>
-            <button>Chantenay</button>
-            <button>Chantenay</button>
-          </div>
-          <img src="Images jeux\Machine de lile.jpg" alt="Elephant Nantes" />
+        <!-- <article class="card-card-quest"> -->
+          <section class="text-quest">
+            <div class="choices-wrapper">
+              <button>Chantenay</button>
+              <button>Chantenay</button>
+              <button>Chantenay</button>
+              <button>Chantenay</button>
+            </div>
+            <img
+              class="image-quest"
+              src="Images jeux\Machine de lile.jpg"
+              alt="Elephant Nantes"
+            />
+          <!-- </section> -->
           <button class="cta">Valider</button>
         </article>
       </section>
