--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nantes Quests</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./CSS/Style.css" />
   </head>
   <body>
     <header>
@@ -22,12 +22,8 @@
     <main>
       <h1>Trouve le lieu à Nantes !</h1>
       <!-- Home Card -->
-<<<<<<< HEAD
       <section class="home-section displaynone">
         <h1>Trouve le lieu à Nantes !</h1>
-=======
-      <section class="home-section">
->>>>>>> 880900c46ffa45186bed484bacd64e3e3c013ab8
         <article class="card card-home">
           <h2>Bienvenue sur le Quiz Géographie</h2>
           <p>~</p>
@@ -40,12 +36,8 @@
         </article>
       </section>
       <!-- Quest Card -->
-<<<<<<< HEAD
       <section class="quest-section displaynone">
         <h1>Trouve le lieu à Nantes !</h1>
-=======
-      <section class="quest-section">
->>>>>>> 880900c46ffa45186bed484bacd64e3e3c013ab8
         <article class="card card-quest">
           <div class="choices-wrapper">
             <button>Chantenay</button>
