--- a/index.html
+++ b/index.html
@@ -67,5 +67,8 @@
     <footer>
       <p>©apyright | Team KipiK</p>
     </footer>
+    <script type="module">
+      import { runApplication } from "./ScriptJS/Script.js";
+    </script>
   </body>
 </html>
