--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <div class="score-wrapper">
             <p>Ton score est :</p>
             <p id="userScore">5/5</p>
+            <input type="text" name="name" id="userName" required />
           </div>
           <p>~</p>
           <button class="cta replayButton">Rejouer</button>
