construction de la score card et mise en page

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
           <p>~</p>
           <div class="score-wrapper">
             <p>Ton score est :</p>
-            <p id="userScore">5/5</p>
-            <input type="text" name="name" id="userName" required />
-          </div>
+            <p id="userScore"><span>5/5</span></p>
+           </div>
           <p>~</p>
           <button class="cta replayButton">Rejouer</button>
         </article>
