--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </section>
       <!-- Quest Card -->
 
-      <section class="quest-section">
-        <article class="card card-quest">
+      <article class="card-card-quest">
+        <section class="quest-section">
           <div class="choices-wrapper">
             <button class="choice">Les Machineries de Nantes</button>
             <button class="choice">l'Elephant Géant</button>
