--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       </section>
       <!-- Quest Card -->
 
-      <section class="quest-section">
+      <section class="quest-section displaynone">
         <article class="card card-quest">
           <div class="choices-wrapper">
-            <button class="choice">Les Machineries de Nantes</button>
-            <button class="choice">l'Elephant Géant</button>
-            <button class="choice">Les Machines de l'Ile</button>
-            <button class="choice">Le Machin truc bidule</button>
+            <button class="choice choice1">Les Machineries de Nantes</button>
+            <button class="choice choice2">l'Elephant Géant</button>
+            <button class="choice choice3">Les Machines de l'Ile</button>
+            <button class="choice choice4">Le Machin truc bidule</button>
           </div>
           <img
             class="image-quest"
@@ -54,7 +54,7 @@
       </article>
 
       <!-- Score Card -->
-      <section class="score-section">
+      <section class="score-section displaynone">
         <article class="card card-score">
           <h2>Bravo <span class="currentUserName"></span> !</h2>
           <p>~</p>
