Html et css pratiquement fini v2

--- a/index.html
+++ b/index.html
@@ -36,22 +36,24 @@
       </section>
       <!-- Quest Card -->
 
-      <article class="card-card-quest">
-        <section class="quest-section">
-          <div class="choices-wrapper">
-            <button class="choice">Les Machineries de Nantes</button>
-            <button class="choice">l'Elephant Géant</button>
-            <button class="choice">Les Machines de l'Ile</button>
-            <button class="choice">Le Machin truc bidule</button>
-          </div>
-          <img
-            class="image-quest"
-            src="GameImage/Machine de lile.jpg"
-            alt="Elephant Nantes"
-          />
+      <section class="quest-section">
+        <section class="card card-quest">
+          <article class="text-quest">
+            <div class="choices-wrapper">
+              <button class="choice">Les Machineries de Nantes</button>
+              <button class="choice">l'Elephant Géant</button>
+              <button class="choice">Les Machines de l'Ile</button>
+              <button class="choice">Le Machin truc bidule</button>
+            </div>
+            <img
+              class="image-quest"
+              src="GameImage/Machine de lile.jpg"
+              alt="Elephant Nantes"
+            />
+          </article>
+          <button class="cta quest">Valider</button>
         </section>
-        <button class="cta quest">Valider</button>
-      </article>
+      </section>
 
       <!-- Score Card -->
       <section class="score-section">
