--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
       </section>
       <!-- Quest Card -->
 
-      <article class="card-card-quest">
-        <section class="quest-section">
+      <section class="quest-section displaynone">
+        <article class="card card-quest">
           <div class="choices-wrapper">
-            <button class="choice choice1">Les Machineries de Nantes</button>
+            <!-- <button class="choice choice1">Les Machineries de Nantes</button>
             <button class="choice choice2">l'Elephant Géant</button>
             <button class="choice choice3">Les Machines de l'Ile</button>
-            <button class="choice choice4">Le Machin truc bidule</button>
+            <button class="choice choice4">Le Machin truc bidule</button> -->
           </div>
           <img
             class="image-quest"
             src="GameImage/Machine de lile.jpg"
             alt="Elephant Nantes"
           />
-        </section>
-        <button class="cta quest">Valider</button>
-      </article>
+          <button class="cta quest validationButton">Valider</button>
+        </article>
+      </section>
 
       <!-- Score Card -->
       <section class="score-section displaynone">
