--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nantes Quests</title>
     <link rel="stylesheet" href="./CSS/Style.css" />
+    <!-- CONFETTIS -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
   </head>
   <body>
     <header>
@@ -72,6 +74,6 @@
     </footer>
     <script type="module">
       import { runApplication } from "./ScriptJS/Script.js";
-    </script>
+    </script>  
   </body>
 </html>
