--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nantes Quests</title>
     <link rel="stylesheet" href="CSS/Style.css" />
+    <!-- comment -->
   </head>
   <body>
     <header>
