--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
       <!-- Quest Card -->
 
-      <section class="quest-section">
+      <section class="quest-section displaynone">
         <article class="card card-quest">
           <div class="img-choice-wrapper">
             <div class="choices-wrapper"></div>
@@ -68,7 +68,7 @@
       </section>
 
       <!-- Score Card -->
-      <section class="score-section">
+      <section class="score-section displaynone">
         <article class="card card-score">
           <h2>Bravo Joueur 1 <span class="currentUserName"></span> !</h2>
           <span>~</span>
