all quiz Data integrated in js application

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <input type="text" name="name" id="userName" value="" required />
           </form>
           <div class="quiz-choices">
-            <button class="cta-choice launcherButton" type="button">
+            <button class="cta-choice geoLauncherButton" type="button">
               Géographie
             </button>
-            <button class="cta-choice launcherButton" type="button">
+            <button class="cta-choice historyLauncherButton" type="button">
               Histoire
             </button>
-            <button class="cta-choice launcherButton" type="button">
+            <button class="cta-choice cultureLauncherButton" type="button">
               Culture
             </button>
           </div>
@@ -54,10 +54,11 @@
       </section>
       <!-- Quest Card -->
 
-      <section class="quest-section">
+      <section class="quest-section displaynone">
         <article class="card card-quest">
           <div class="img-choice-wrapper">
             <div class="choices-wrapper"></div>
+            <p class="statement"></p>
             <img
               class="image-quest"
               src="GameImage/Machine de lile.jpg"
@@ -68,7 +69,7 @@
       </section>
 
       <!-- Score Card -->
-      <section class="score-section">
+      <section class="score-section displaynone">
         <article class="card card-score">
           <h2>Bravo Joueur 1 <span class="currentUserName"></span> !</h2>
           <span>~</span>
