--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
           src="ImagesIcones/LOGO NANTES QUEST GD.png"
           alt=""
           class="logo-home" />
-        <div class="links-wrapper">
+        <div class="buttonsNav-wrapper">
           <!-- <a href="#" class="quiz-geo" att>Quiz Géographie </a> -->
-          <button class="quiz-geo nav-link">Quiz Géographie</button>
+          <button class="quiz-geo nav-link" data-quiz="geoQuiz" disabled title="Entrez d'abord votre nom avant de commencer un quiz.">Quiz Géographie</button>
           <p>|</p>
-          <button class="quiz-histo nav-link">Quiz Histoire</button>
+          <button class="quiz-histo nav-link" data-quiz="historyQuiz" disabled title="Entrez d'abord votre nom avant de commencer un quiz.">Quiz Histoire</button>
           <p>|</p>
-          <button class="quiz-cultu nav-link">Quiz Culture</button>
+          <button class="quiz-cultu nav-link" data-quiz="cultureQuiz" disabled title="Entrez d'abord votre nom avant de commencer un quiz.">Quiz Culture</button>
         </div>
       </nav>
     </header>
