dynamic title with js + animation css appear

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
     <main>
-      <h1>Trouve le lieu à Nantes !</h1>
+      <h1 class="titleQuiz"></h1>
       <!-- Home Card -->
       <section class="home-section">
         <article class="card card-home">
@@ -64,7 +64,8 @@
             <img
               class="image-quest"
               src="GameImage/Machine de lile.jpg"
-              alt="Elephant Nantes" />
+              alt="Elephant Nantes" 
+              loading="lazy"/>
           </div>
           <button class="cta quest validationButton">Valider</button>
         </article>
