--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <link rel="stylesheet" href="CSS/Style.css" />
     <!-- comment -->
+    <link
+      rel="shortcut icon"
+      href="ImagesIcones/Capytaille.ico"
+      type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -19,11 +23,29 @@
           class="logo-home" />
         <div class="buttonsNav-wrapper">
           <!-- <a href="#" class="quiz-geo" att>Quiz Géographie </a> -->
-          <button class="quiz-geo nav-link" data-quiz="geoQuiz" disabled title="Entrez d'abord votre nom avant de commencer un quiz.">Quiz Géographie</button>
+          <button
+            class="quiz-geo nav-link"
+            data-quiz="geoQuiz"
+            disabled
+            title="Entrez d'abord votre nom avant de commencer un quiz.">
+            Quiz Géographie
+          </button>
           <p>|</p>
-          <button class="quiz-histo nav-link" data-quiz="historyQuiz" disabled title="Entrez d'abord votre nom avant de commencer un quiz.">Quiz Histoire</button>
+          <button
+            class="quiz-histo nav-link"
+            data-quiz="historyQuiz"
+            disabled
+            title="Entrez d'abord votre nom avant de commencer un quiz.">
+            Quiz Histoire
+          </button>
           <p>|</p>
-          <button class="quiz-cultu nav-link" data-quiz="cultureQuiz" disabled title="Entrez d'abord votre nom avant de commencer un quiz.">Quiz Culture</button>
+          <button
+            class="quiz-cultu nav-link"
+            data-quiz="cultureQuiz"
+            disabled
+            title="Entrez d'abord votre nom avant de commencer un quiz.">
+            Quiz Culture
+          </button>
         </div>
       </nav>
     </header>
@@ -32,22 +54,42 @@
       <!-- Home Card -->
       <section class="home-section">
         <article class="card card-home">
-          <h2>Bienvenue sur Nantes Quest <span class="currentUserName"></span>!</h2>
+          <h2>
+            Bienvenue sur Nantes Quest <span class="currentUserName"></span>!
+          </h2>
           <span>~</span>
           <div class="whatsYrNameFormContainer displaynone">
             <form id="formName">
-              <label class="nameLabel " for="name">Quel est ton nom ?</label>
-              <input required class="mandatory" type="text" name="name" id="userName" value="" />
+              <label class="nameLabel" for="name">Quel est ton nom ?</label>
+              <input
+                required
+                class="mandatory"
+                type="text"
+                name="name"
+                id="userName"
+                value="" />
             </form>
           </div>
           <div class="quiz-choices">
-            <button disabled class="cta-choice geoLauncherButton" data-quiz="geoQuiz" type="submit">
+            <button
+              disabled
+              class="cta-choice geoLauncherButton"
+              data-quiz="geoQuiz"
+              type="submit">
               Géographie
             </button>
-            <button disabled class="cta-choice historyLauncherButton" data-quiz="historyQuiz" type="submit">
+            <button
+              disabled
+              class="cta-choice historyLauncherButton"
+              data-quiz="historyQuiz"
+              type="submit">
               Histoire
             </button>
-            <button disabled class="cta-choice cultureLauncherButton" data-quiz="cultureQuiz" type="submit">
+            <button
+              disabled
+              class="cta-choice cultureLauncherButton"
+              data-quiz="cultureQuiz"
+              type="submit">
               Culture
             </button>
           </div>
